[gd_scene load_steps=3 format=3 uid="uid://dvehdaexcgk6e"]

[ext_resource type="Texture2D" uid="uid://c5rhadptgtnau" path="res://assets/etc/bg-intro.png" id="1_q8e7s"]
[ext_resource type="Script" path="res://src/screens/main_menu/main_menu.gd" id="1_sa8uv"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 1
script = ExtResource("1_sa8uv")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_q8e7s")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = -273.0
offset_top = 12.0
offset_right = -86.0
offset_bottom = 170.0

[node name="ContinueLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "Continue"

[node name="NewGameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "New Game"

[node name="OptionsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "Options"

[node name="ExitLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "Exit"
